@@ -28,7 +28,7 @@
 #include "core/cfg.h"
 #include "core/core.h"
 #include "file/file.h"
-#include "file/filedata.h"
+#include "file/format_options.h"
 #include "modules/gui.h"
 #include "raster/raster.h"
 #include "script/script.h"
